Bug fixes
Worked around div border color not showing
Fixed header/footer page width issues

--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,9 @@ html {
   font-size: 62.5%;
 }
 .head-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #97A4B0;
   color: #FFFFFF;
   font-weight: bold;
@@ -157,9 +160,19 @@ html {
   top: 0;
   width: 100%;
   height: 50px;
+}
+.head-nav div {
+  width: 100%;
+  max-width: 1024px;
+  background-color: green;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+@media (max-width: 400px) {
+  .head-nav div {
+    max-width: 320px;
+  }
 }
 .head-nav a {
   color: #FFFFFF;
@@ -190,11 +203,11 @@ footer {
 }
 footer .foot-panels {
   max-width: 1024px;
-  width: 100%;
+  width: 45%;
   margin-top: 50px;
   margin-bottom: 20px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 @media (max-width: 400px) {
   footer .foot-panels {
@@ -212,7 +225,7 @@ footer .foot-panels h3 {
   line-height: 24px;
 }
 footer .foot-panels div {
-  width: 20%;
+  width: 15%;
 }
 @media (max-width: 400px) {
   footer .foot-panels div {
@@ -221,7 +234,7 @@ footer .foot-panels div {
   }
 }
 footer .foot-panels .foot-email {
-  width: 35%;
+  width: 33%;
 }
 @media (max-width: 400px) {
   footer .foot-panels .foot-email {
