--- a/less/footer.less
+++ b/less/footer.less
@@ -19,11 +19,11 @@ footer {
 
     .foot-panels {
         max-width: @desktop-width;
-        width: 100%;
+        width: 45%;
         margin-top: 50px;
         margin-bottom: 20px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
 
         @media @mobile {
             .center;
@@ -39,7 +39,7 @@ footer {
         }
 
         div {
-            width: 20%;
+            width: 15%;
 
             @media @mobile {
                 width: 90%;
@@ -47,9 +47,8 @@ footer {
             }
         }
 
-
         .foot-email {
-            width: 35%;
+            width: 33%;
 
             @media @mobile {
                 width: 90%;
