--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,7 @@
 // Header styling
 
 .head-nav {
+    .center;
     background-color: @nav-bg;
     color: @nav-text;
     font-weight: bold;
@@ -10,9 +11,20 @@
     top: 0;
     width: 100%;
     height: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+
+    div {
+        width: 100%;
+        max-width: @desktop-width;
+        background-color: green;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        @media @mobile {
+            max-width: @mobile-width;
+        }
+    }
+
     a {
         color: @nav-text;
         font-size: 4.8rem;
